use crate::database::Database;
use crate::model::ModelError;
use crate::model::degree::{Degree, DegreeError};
use crate::model::offer::Offer;
use crate::model::offer_type::{OfferType, OfferTypeError};
use crate::model::speciality::{Speciality, SpecialityError};
use crate::model::study_form::{StudyForm, StudyFormError};
use crate::repository::{Repository, RepositoryError, RepositoryResult};

pub struct OfferRepository<'a> {
    db: &'a Database,
}

#[async_trait::async_trait]
impl<'a> Repository<'a> for OfferRepository<'a> {
    fn new(database: &'a Database) -> Self
    where
        Self: Sized,
    {
        Self { db: database }
    }

    async fn is_empty(&self) -> RepositoryResult<bool> {
        let result = sqlx::query!("SELECT EXISTS (SELECT 1 FROM offer);")
            .fetch_one(&self.db.pool)
            .await
            .map_err(RepositoryError::Sql)?;

        Ok(!result.exists.unwrap_or(false))
    }
}

impl OfferRepository<'_> {
    pub async fn create(&self, offer: &Offer) -> RepositoryResult<()> {
        sqlx::query!(
            r#"
                INSERT INTO offer (id, title, degree_id, education_program, faculty, speciality_code, type_id, master_type, study_form_id, license_volume, budgetary_places)
                VALUES ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11)
            "#,
            offer.id,
            offer.title,
            (offer.degree as i16),
            offer.education_program,
            offer.faculty,
            offer.speciality.code(),
            (offer.funding_type as i16),
            offer.master_type,
            (offer.study_form as i16),
            offer.license_volume,
            offer.budgetary_places
        )
        .execute(&self.db.pool)
        .await
        .map_err(RepositoryError::Sql)?;

        Ok(())
    }

    pub async fn find_by_id(&self, id: i32) -> RepositoryResult<Vec<Offer>> {
        let rows = sqlx::query!(
            r#"
            SELECT id, title, degree_id, education_program, faculty, speciality_code, type_id, master_type, study_form_id, license_volume, budgetary_places
            FROM offer
            WHERE id = $1
        "#,
            id
        )
        .fetch_all(&self.db.pool)
        .await
        .map_err(RepositoryError::Sql)?;

        let mut offers = Vec::new();
        for row in rows {
            let offer = Offer {
                id: row.id,
                title: row.title,
                // TODO: Fix Warning
                // Casting `i16` to `i8` may truncate the value
                degree: Degree::try_from(row.degree_id as i8)
                    .map_err(DegreeError::UnknownDegree)
                    .map_err(ModelError::Degree)?,
                education_program: row.education_program,
                faculty: row.faculty,
                speciality: Speciality::try_from(row.speciality_code.as_str())
                    .map_err(ModelError::Speciality)?,
                // TODO: Fix Warnings
                // Casting `i16` to `i8` may truncate the value
                funding_type: OfferType::try_from(row.type_id as i8)
                    .map_err(|_| OfferTypeError::InvalidCode(row.type_id as i8))
                    .map_err(ModelError::OfferType)?,
                master_type: row.master_type,
                // TODO: Fix Warnings
                // Casting `i16` to `i8` may truncate the value
                study_form: StudyForm::try_from(row.study_form_id as i8)
                    .map_err(|_| StudyFormError::UnknownId(row.study_form_id as i8))
                    .map_err(ModelError::StudyForm)?,
                license_volume: row.license_volume,
                budgetary_places: row.budgetary_places,
            };
            offers.push(offer);
        }

        Ok(offers)
    }

    pub async fn find_all(&self) -> RepositoryResult<Vec<Offer>> {
        let rows = sqlx::query!(
            r#"
            SELECT id, title, degree_id, education_program, faculty, speciality_code, type_id, master_type, study_form_id, license_volume, budgetary_places
            FROM offer
        "#)
            .fetch_all(&self.db.pool)
            .await
            .map_err(RepositoryError::Sql)?;

        let mut offers = Vec::new();
        for row in rows {
            let offer = Offer {
                id: row.id,
                title: row.title,
                // TODO: Fix Warning
                // Casting `i16` to `i8` may truncate the value
                degree: Degree::try_from(row.degree_id as i8)
                    .map_err(DegreeError::UnknownDegree)
                    .map_err(ModelError::Degree)?,
                education_program: row.education_program,
                // TODO: Fix Warning
                // Casting `i16` to `i8` may truncate the value
                study_form: StudyForm::try_from(row.study_form_id as i8)
                    // TODO: Fix Warning
                    // Casting `i16` to `i8` may truncate the value
                    .map_err(|_| StudyFormError::UnknownId(row.study_form_id as i8))
                    .map_err(ModelError::StudyForm)?,
                faculty: row.faculty,
                speciality: Speciality::try_from(row.speciality_code.as_str())
                    .map_err(|_| {
                        SpecialityError::UnknownSpecialityCode(row.speciality_code)
                    })
                    .map_err(ModelError::Speciality)?,
                // TODO: Fix Warning
                // Casting `i16` to `i8` may truncate the value
                funding_type: OfferType::try_from(row.type_id as i8)
                    // TODO: Fix Warning
                    // Casting `i16` to `i8` may truncate the value
                    .map_err(|_| OfferTypeError::InvalidCode(row.type_id as i8))
                    .map_err(ModelError::OfferType)?,
                master_type: row.master_type,
                license_volume: row.license_volume,
                budgetary_places: row.budgetary_places,
            };
            offers.push(offer);
        }

        Ok(offers)
    }

    pub async fn update(&self, offer: &Offer) -> RepositoryResult<u64> {
        let result = sqlx::query!(
            r#"
                UPDATE offer
                SET title = $1,
                    degree_id = $2,
                    education_program = $3,
                    faculty = $4,
                    speciality_code = $5,
                    type_id = $6,
                    master_type = $7,
                    study_form_id = $8,
                    license_volume = $9,
                    budgetary_places = $10
                WHERE id = $11
            "#,
            offer.title,
            (offer.degree as i16),
            offer.education_program,
            offer.faculty,
            offer.speciality.code(),
            (offer.funding_type as i16),
            offer.master_type,
            (offer.study_form as i16),
            offer.license_volume,
            offer.budgetary_places,
            offer.id
        )
        .execute(&self.db.pool)
        .await
        .map_err(RepositoryError::Sql)?;

        Ok(result.rows_affected())
    }

    pub async fn delete(&self, id: i32) -> RepositoryResult<u64> {
        let result = sqlx::query!(
            r#"
                DELETE FROM offer
                WHERE id = $1
            "#,
            id
        )
        .execute(&self.db.pool)
        .await
        .map_err(RepositoryError::Sql)?;

        Ok(result.rows_affected())
    }
}
